--- a/app.css
+++ b/app.css
@@ -10,11 +10,13 @@ body {
 
 h1 {
   color: rgb(83, 49, 156);
+  margin: 32px 0 64px 0;
 }
 
 .container {
   background-color: white;
   max-width: 900px;
+  box-sizing: border-box;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -136,6 +138,7 @@ h1 {
 .slider {
   width: 100%;
   position: relative;
+  margin: 0 0 16px 0;
 }
 
 .slider .bar {
@@ -191,4 +194,82 @@ h1 {
     padding: 0;
     color: rgb(166, 166, 166);
     font-weight: bold;
+}
+
+.card-wrapper {
+    display: flex;
+}
+
+.card {
+    background-color: rgb(250, 247, 255);
+    border-radius: 10px;
+    margin: 16px;
+    box-shadow: 0px 3px 11px 1px rgba(0, 0, 0, 0.1);
+    padding: 16px 32px;
+    text-align: center;
+    font-weight: bold;
+    color: rgb(86, 49, 156);
+    transition: 0.25s transform ease;
+    position: relative;
+}
+
+.card .top-section p {
+    margin: 4px 0;
+}
+
+.card .top-section {
+    padding: 8px;
+    text-transform: uppercase;
+}
+
+.card .price {
+    font-size: 42px;
+    color: rgb(44, 44, 44);
+
+}
+
+.card hr {
+    width: 30%;
+    border: 1px solid rgb(210, 210, 210);
+    border-radius: 2px;
+}
+
+.card button {
+    border: none;
+    color: white;
+    background-color: rgb(83, 49, 156);
+    padding: 16px;
+    border-radius: 10px;
+    transition: 0.15s transform ease;
+    font-weight: bold;
+    margin: 8px 0;
+}
+
+.card button:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+}
+
+.card:hover {
+    transform: translateY(-8px);
+}
+
+.card .off-badge {
+    background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(53, 10, 74, 1) 36%,
+    rgba(83, 49, 156, 1) 100%
+  );
+  color: white;
+  width: 100%;
+  position: absolute;
+  top: -24px;
+  left: 0;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+}
+
+.card .off-badge p {
+    margin: 0;
 }
