--- a/app.css
+++ b/app.css
@@ -165,97 +165,96 @@ h1 {
 }
 
 .slider .point {
-    height: 24px;
-    width: 24px;
-    background-color: rgb(83, 49, 156);
-    border-radius: 50%;
-    position: absolute;
-    z-index: 2;
-    left: 28%;
-    top: -4px;
-    border: 2px solid white;
-    transition: 0.15s transform ease;
+  height: 24px;
+  width: 24px;
+  background-color: rgb(83, 49, 156);
+  border-radius: 50%;
+  position: absolute;
+  z-index: 2;
+  left: 28%;
+  top: -4px;
+  border: 2px solid white;
+  transition: 0.15s transform ease;
 }
 
 .slider .point:hover {
-    transform: scale(1.2);
-    cursor: pointer;
+  transform: scale(1.2);
+  cursor: pointer;
 }
 
 .slider .scale {
-    width: 100%;
+  width: 100%;
 }
 
 .slider .scale ul {
-    list-style: none;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding: 0;
-    color: rgb(166, 166, 166);
-    font-weight: bold;
+  list-style: none;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 0;
+  color: rgb(166, 166, 166);
+  font-weight: bold;
 }
 
 .card-wrapper {
-    display: flex;
+  display: flex;
 }
 
 .card {
-    background-color: rgb(250, 247, 255);
-    border-radius: 10px;
-    margin: 16px;
-    box-shadow: 0px 3px 11px 1px rgba(0, 0, 0, 0.1);
-    padding: 16px 32px;
-    text-align: center;
-    font-weight: bold;
-    color: rgb(86, 49, 156);
-    transition: 0.25s transform ease;
-    position: relative;
+  background-color: rgb(250, 247, 255);
+  border-radius: 10px;
+  margin: 16px;
+  box-shadow: 0px 3px 11px 1px rgba(0, 0, 0, 0.1);
+  padding: 16px 32px;
+  text-align: center;
+  font-weight: bold;
+  color: rgb(86, 49, 156);
+  transition: 0.25s transform ease;
+  position: relative;
 }
 
 .card .top-section p {
-    margin: 4px 0;
+  margin: 4px 0;
 }
 
 .card .top-section {
-    padding: 8px;
-    text-transform: uppercase;
+  padding: 8px;
+  text-transform: uppercase;
 }
 
 .card .price {
-    font-size: 42px;
-    color: rgb(44, 44, 44);
-
+  font-size: 42px;
+  color: rgb(44, 44, 44);
 }
 
 .card hr {
-    width: 30%;
-    border: 1px solid rgb(210, 210, 210);
-    border-radius: 2px;
+  width: 30%;
+  border: 1px solid rgb(210, 210, 210);
+  border-radius: 2px;
 }
 
 .card button {
-    border: none;
-    color: white;
-    background-color: rgb(83, 49, 156);
-    padding: 16px;
-    border-radius: 10px;
-    transition: 0.15s transform ease;
-    font-weight: bold;
-    margin: 8px 0;
+  border: none;
+  color: white;
+  background-color: rgb(83, 49, 156);
+  padding: 16px;
+  border-radius: 10px;
+  transition: 0.15s transform ease;
+  font-weight: bold;
+  margin: 8px 0;
 }
 
 .card button:hover {
-    cursor: pointer;
-    transform: scale(1.05);
+  cursor: pointer;
+  transform: scale(1.05);
 }
 
 .card:hover {
-    transform: translateY(-8px);
+  transform: translateY(-8px);
 }
 
 .card .off-badge {
-    background: linear-gradient(
+  background: linear-gradient(
     90deg,
     rgba(2, 0, 36, 1) 0%,
     rgba(53, 10, 74, 1) 36%,
@@ -271,5 +270,23 @@ h1 {
 }
 
 .card .off-badge p {
-    margin: 0;
+  margin: 0;
+}
+
+@media only screen and (max-width: 750px){
+  .card {
+    width: 100%;
+  }
+  .card-wrapper{
+    flex-wrap: wrap-reverse;
+  }
+}
+
+@media only screen and (max-width: 600px){
+  body {
+    padding: 16px;
+  }
+  .container {
+    padding: 0 16px;
+  }
 }
